feat(version): add poetry version update

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,6 @@ pytest = "^7.4.4"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.semantic_release]
+version_variable = "pyproject.toml:version"
