--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,5 +16,15 @@ pytest = "^7.4.4"
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
+# [tool.semantic_release]
+# version_variable = "pyproject.toml:tool.poetry.version"
+
 [tool.semantic_release]
-version_variable = "pyproject.toml:tool.poetry.version"
+version_variable = [
+    "src_folder/__init__.py:__version__",
+    "pyproject.toml:version"
+]
+branch = "main"
+upload_to_pypi = false
+upload_to_release = false
+build_command = "pip install poetry && poetry build"
