--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.10"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.4"
+python-semantic-release = "^8.7.0"
 
 [build-system]
 requires = ["poetry-core"]
@@ -24,7 +25,3 @@ version_variable = [
     "src_folder/__init__.py:__version__",
     "pyproject.toml:version"
 ]
-branch = "main"
-upload_to_pypi = false
-upload_to_release = false
-build_command = "pip install poetry && poetry build"
