--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,5 +23,5 @@ build-backend = "poetry.core.masonry.api"
 [tool.semantic_release]
 version_variable = [
     "src_folder/__init__.py:__version__",
-    "pyproject.toml:version"
+    "pyproject.toml:tool.poetry.version"
 ]
