--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,3 +25,5 @@ jobs:
       run: |
         pip install python-semantic-release
         semantic-release publish
+      env:
+        GH_TOKEN: ${{ secrets.GH_TOKEN }}
