--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,5 +25,6 @@ jobs:
       run: |
         pip install python-semantic-release
         semantic-release version
+        semantic-release publish
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
